# tectonic-ci-support

./: README.md  azure-pipelines.yml
.azure-pipelines/: build-builder-steps.yml  build-custom-cross-steps.yml  build-tool-steps.yml  builder-cd-pipeline.yml  builder-pr-pipeline.yml  cross-builder.yml  custom-cross-cd-pipeline.yml  custom-cross-pr-pipeline.yml  custom-cross.yml  tool-cd-pipeline.yml  tool-pr-pipeline.yml  variables.yml
bigendian/: .gitignore  README.md  Vagrantfile  inner-provision.sh  make-chroot.sh  outer-provision.sh
cross-images/: 01_alpine_priv_setup.sh  01_debian_populate.sh  02_alpine_unpriv_setup.sh  02_debian_setup_env.sh  03_alpine_populate.sh  04_ubuntu_priv_setup.sh  05_ubuntu_unpriv_setup.sh  06_setup_env.sh  Dockerfile.alpine-chroot  Dockerfile.alpine-chroot-cross  Dockerfile.debian-cross  README.md  build.aarch64-unknown-linux-musl.sh  build.arm-unknown-linux-musleabihf.sh  build.i686-unknown-linux-gnu.sh  build.mips-unknown-linux-gnu.sh  build.x86_64-unknown-linux-musl.sh  debian-entrypoint.sh  enter-chroot  entrypoint.sh  linkwrapper.sh.in  qemu.sh  toolwrapper.sh.in
cross-images/mini-aports/scripts/: bootstrap.sh
custom-cross/: 001-privileged.patch  001-privileges.patch  002-rw-project.patch  Dockerfile  README.md
custom-cross/TEST/: Dockerfile
kcov/debian/: README.source  changelog  control  copyright  gbp.conf  manpages  rules  watch
kcov/debian/patches/: disable-tests.patch  fpic.patch  javascript.patch  series
kcov/debian/source/: include-binaries  patch-header
tool/: Cargo.toml  README.md
tool/src/: main.rs
